[tool.poetry]
name = "test-dependency"
version = "0.1.0"
description = "A test dependency"
authors = ["Corey <corey@budge-it.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
